tests/fixtures/negative/storage_wrong_nvme_path_owner.wrela
// expect: SEM0111: foreground storage writer cannot use background NVMe path
module negative.storage_wrong_nvme_path_owner

unique class OwnedHardware {}
unique class DelegatedHardware {
    fn exit_to_owned_hardware(self) -> OwnedHardware {
        return OwnedHardware()
    }
}
data PathIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
data NvmePathRole { role: U32 }
const NVME_PATH_FOREGROUND: U32 = 1
const NVME_PATH_BACKGROUND: U32 = 2
data NvmeSubmission { command_id: U16 }
driver path NvmeIoPath {
    identity: PathIdentity
    role: NvmePathRole
    owner: ExecutorSlot
    queue_id: U16
    vector: U8
}
data ForegroundStoragePath { nvme_path: NvmeIoPath }
data BackgroundStoragePath { nvme_path: NvmeIoPath }
data StreamDirectory { next_stream_id: U64 }
data StorageMetrics {}
data PendingAtomicGroup {}
data StorageAppendResult { ok: Bool }
data StorageWriter {
    foreground: ForegroundStoragePath
    background: BackgroundStoragePath
    stream_directory: StreamDirectory
    metrics: StorageMetrics

    fn enqueue_atomic_group(self, group: PendingAtomicGroup) -> StorageAppendResult {
        return StorageAppendResult(ok = true)
    }
}

image StorageImage {
    transitions {
        delegated_hardware -> owned_hardware
    }

    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware {
        return hardware.exit_to_owned_hardware()
    }

    phase owned_hardware(hardware: OwnedHardware) -> never {
        let foreground_slot = ExecutorSlot(id = 0)
        let maintenance_slot = ExecutorSlot(id = 1)
        let foreground_nvme_path = NvmeIoPath(identity = PathIdentity(label = "nvme.foreground"), role = NvmePathRole(role = NVME_PATH_FOREGROUND), owner = foreground_slot, queue_id = 1, vector = 80)
        let background_nvme_path = NvmeIoPath(identity = PathIdentity(label = "nvme.background"), role = NvmePathRole(role = NVME_PATH_BACKGROUND), owner = maintenance_slot, queue_id = 2, vector = 81)
        let foreground = ForegroundStoragePath(nvme_path = background_nvme_path)
        let background = BackgroundStoragePath(nvme_path = background_nvme_path)
        let stream_directory = StreamDirectory(next_stream_id = 0)
        let metrics = StorageMetrics()
        let writer = StorageWriter(foreground = foreground, background = background, stream_directory = stream_directory, metrics = metrics)
        let result = writer.enqueue_atomic_group(group = PendingAtomicGroup())
        while true {}
    }
}
